refactory: change files names

--- a/index.html
+++ b/index.html
@@ -6,49 +6,76 @@
 </head>
 <body>
    <h1>John Levy</h1> 
-   <p> <em> Я сижу <a href="https://st2.depositphotos.com/4230659/9950/v/600/depositphotos_99506730-stock-illustration-businessman-looking-at-the-laptop.jpg" target="_blank"> за компом</a>.</em></p>
-   <a> <strong> Я</strong> люблю сидеть <strong> <a href="https://st2.depositphotos.com/4230659/9950/v/600/depositphotos_99506730-stock-illustration-businessman-looking-at-the-laptop.jpg" target="_blank"> за компом </a></strong>.</p>
+   <table>
+       <td> <img src="John_Levy.jpg" alt="Алексей"> </td>
+       <td>Настоящее имя - <strong>Балюра Алексей</strong></td>
+   </table>
+   <p> Я являюсь начинающим программистом.</p>
+   <a> Я люблю алгоритмизацию.</p>
    <hr>
    <h2>Меня можно найти:</h2>
    <ul  type="square">
-       <li> <em> <strong> Telega </strong></em></li>
-       <li>VK</li>
+       <li> <strong> Telegram: <em>@John_Levy</em> </strong></li>
+       <li> <a href="https://vk.com/john_levy" target="_blank"> VK </a> <a href="Second_page.html"><em>(предпросмотр)</em></a>     </li>
    </ul>
-   <h2>Хоббисы</h2>
+   <hr>
+   <h2>Мои хобби</h2>
    <ol>
-       <li>Хейт <strong>Штука</strong></li>
-       <li>Хейтить <strong>Штука</strong></li>
-       <li>Хейт хейт хейт <strong>Штукатура</strong></li>
+       <li> Диалог с людьми </li>
+       <li> Изучение программирования </li>
+       <li> Разборка техники на мелкие детали </li>
    </ol>
-   <ol start="5">
-       <li>Хейт ... хейт <strong>Маляра-Штукатура</strong></li>
-   </ol>
-   <hr>
-   <h2> Кто же такой Штук?</h2>
-   <a href="Shtuk.html" target="_blank">Посмотреть</a>
-   <hr>
+      <hr>
+       
    <table>
-       <tr>
-         <td> <del>Ш</del></td> 
-         <td> <del>т</del></td>
-         <td> <del>у</del></td>
-         <td> <del>к</del></td> 
+        <tr>
+        <th></th>
+        <th> <strong> <ins>Опыт работы</ins> </strong> </th>
+        <th></th>
+      </tr>
+        <tr>
+         <th>Компания</th>
+         <th>Должность</th>
+         <th>Год</th>
        </tr>
-   </table>
+       <tr>
+         <td>СШ №11 г.Гродно </td> 
+         <td> Учитель </td>
+         <td> 2014-2015 </td>
+       </tr>
+       <tr>
+        <td>СШ №31 г.Гродно </td> 
+        <td> Учитель </td>
+        <td> 2015-2016 </td>
+      </tr>
+      <tr>
+        <td>СШ №23 г.Гродно </td> 
+        <td> Учитель </td>
+        <td> 2016-2018 </td>
+      </tr>
+      <tr>
+        <td>СШ №23 г.Гродно </td> 
+        <td> Инженер-программист </td>
+        <td> 2017-2018 </td>
+      </tr>
+      <tr>
+        <td>СООО "БелПольЛогистикс" </td> 
+        <td> Логистик </td>
+        <td> 2018-2022 </td>
+      </tr>
+       
+    </table>
    <hr>
-   <h1>Любимые фразы Штука:  </h1>
-   <ol>
-    <li><pre>" IIa4imy    oH, a He 9I ?"</pre></li>
-    <li><strong>...</strong></li>
-    </ol>
-   <h2>Предлагается дополнить список своей фразой, например:<mark>" Я <em>огр-маг</em>!"</mark></h2>
+   <h2>Любимая фраза  </h2>
+   <pre>" Все проблемы решаются диалогом "</pre>
+   <h2>Предлагаю создать список поучительных фраз</h2>
    <form>
        <label for="data">Ваша фраза:</label>
        <textarea name="data" id="data" cols="100" rows="1"></textarea>
        <input type="submit" value="Запомнить">
     </form>
     <form>
-     <input type="submit" value="Забыть"><p>Пашка, не клацай последнюю кнопку!</p>
+     <input type="submit" value="Забыть"><p></p>
     </form>
 </body>
 </html>
